VulkanGameEngineLevelEditorInterlopDLL/LevelSystemDLL.h

#pragma once
#include <LevelSystem.h>

#ifdef __cplusplus
extern "C"
{
#endif
    DLL_EXPORT VkCommandBuffer LevelSystem_RenderBloomPass(VkGuid& renderPassId);
    DLL_EXPORT VkCommandBuffer LevelSystem_RenderFrameBuffer(VkGuid& renderPassId);
    DLL_EXPORT VkCommandBuffer LevelSystem_RenderLevel(VkGuid& renderPassId, VkGuid& levelId, const float deltaTime);
    DLL_EXPORT void LevelSystem_LoadLevel(const char* levelPath);
    DLL_EXPORT void LevelSystem_Update(float deltaTime);
    DLL_EXPORT void LevelSystem_DestroyLevel();
    DLL_EXPORT LevelLayout LevelSystem_GetLevelLayout();
    DLL_EXPORT LevelLayer* LevelSystem_GetLevelLayerList(int& outCount);
    DLL_EXPORT uint** LevelSystem_GetLevelTileMapList(int& outCount);
    DLL_EXPORT LevelTileSet* LevelSystem_GetLevelTileSetList(int& outCount);
#ifdef __cplusplus
}
#endif